# database-sampler

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml  taskfile.yml
.github/: workflows
docs/: acknowledgements.md
src/database_sampler/: __init__.py  cli.py  conn.py  files.py  sampler.py
src/database_sampler/etc/: settings.yml
tests/: conftest.py  test_files.py  test_sampler.py
tests/etc/: settings.yml
