[project]
name = "database-sampler"
version = "0.1.0"
description = "Simple tool to download filtered data based on temporal columns"
readme = "README.md"
authors = [
    { name = "Alex Carimán", email = "alex@cariman.cl" }
]
requires-python = ">=3.11"
dependencies = [
    "adbc-driver-sqlite>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.4",
]
