[project]
name = "database-sampler"
version = "0.1.0"
description = "Simple tool to download filtered data based on temporal columns"
readme = "README.md"
authors = [
    { name = "Alex Carimán", email = "alex@cariman.cl" }
]
requires-python = ">=3.11"
dependencies = [
    "adbc-driver-bigquery>=1.4.0",
    "adbc-driver-postgresql>=1.4.0",
    "adbc-driver-snowflake>=1.4.0",
    "adbc-driver-sqlite>=1.4.0",
    "polars>=1.21.0",
    "pyarrow>=19.0.0",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_file = "test.log"
log_file_level = "DEBUG"
addopts = "-q"
